--- a/app/views/sites/show.html.erb
+++ b/app/views/sites/show.html.erb
@@ -1,2 +1,2 @@
-<h1>Sites#show</h1>
-<p>Find me in app/views/sites/show.html.erb</p>
+<h1>Fallback page</h1>
+<p>The page you were looking for is missing</p>
